SUBDIRS = util column-chooser treeviewutils \
  datetime \
  fileformatchooser \
  pixbufthumbnail \
  spreadtable \
  thumbnailpreview \
  smclient \
  wrapbox

# Don't compile broken code
# SUBDIRS += iconchooser

AM_CPPFLAGS = \
  $(EGG_CFLAGS) $(WARN_CFLAGS) $(DISABLE_DEPRECATED) \
  -DEGG_COMPILATION

##noinst_LTLIBRARIES = libegg.la
